# GcRust

./: LICENSE  README.md
book/: book.toml
google-cloud/: Cargo.toml
google-cloud-derive/: Cargo.toml
google-cloud-derive/src/: lib.rs
google-cloud/src/: error.rs
google-cloud/src/authorize/: mod.rs
google-cloud/src/datastore/: client.rs  index_excluded.rs  key.rs  query.rs  transaction.rs  value.rs
google-cloud/src/datastore/api/: google.api.rs  google.datastore.v1.rs
google-cloud/src/tests/: datastore.rs  storage.rs
