[package]
name = "google-cloud"
version = "0.2.1"
description = "Asynchronous Rust bindings for Google Cloud Platform gRPC APIs"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
edition = "2021"
categories = ["web-programming", "network-programming", "asynchronous"]
keywords = ["grpc", "futures", "async", "google", "cloud"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/google-apis-rs/google-cloud-rs"
documentation = "https://docs.rs/google-cloud"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
# Derive macros
google-cloud-derive = { version = "0.2.1", path = "../google-cloud-derive", optional = true }

tonic = { version = "0.8.3", features = ["tls", "prost"] }
tokio = { version = "1.43.0", features = ["macros", "fs"] }
reqwest = { version = "0.12.4", optional = true, default_features = false, features = ["blocking", "json", "rustls-tls"] }
hyper = "0.14.28"
hyper-rustls = "0.23.2"
futures = "0.3"

prost = "0.11.9"
prost-types = "0.11.9"

http = "0.2.11"
chrono = "0.4.38"

serde = { version = "1.0", features = ["derive"] }
json = { package = "serde_json", version = "1.0" }
jwt = { package = "jsonwebtoken", version = "9.2.0" }
serde_yaml = "0.9.27"

thiserror = "1.0.59"

bytes = { version = "1.6.0", optional = true }
percent-encoding = { version = "2.3.1", optional = true }

[build-dependencies]
tonic-build = "0.8.4"

[features]
default = []
full = ["pubsub", "datastore", "vision", "storage"]
full-derive = ["pubsub", "datastore-derive", "vision", "storage"]
pubsub = []
datastore = []
datastore-derive = ["datastore", "google-cloud-derive"]
vision = []
storage = ["reqwest", "percent-encoding"]
derive = ["datastore-derive"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
